[package]
name = "bevy-collision-2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = "0.15.1"
bevy_color = "0.15.2"
bevy_ecs = "0.15.1"
bevy_eventlistener = { git = "https://github.com/NthTensor/bevy_eventlistener", branch = "main" }
bevy_eventlistener_derive = { git = "https://github.com/NthTensor/bevy_eventlistener", branch = "main" }
bevy_gizmos = "0.15.1"
bevy_hierarchy = "0.15.1"
bevy_math = "0.15.1"
bevy_text = "0.15.1"
bevy_transform = "0.15.1"
bevy_ui = "0.15.1"
bevy_utils = "0.15.1"
bitflags = "2.6.0"
glam = "0.29.2"

[dev-dependencies]
bevy = "0.15.1"
rand = "0.8.5"
