[package]
name = "bevy-collision-2d"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy_app = "0.16"
bevy_color = "0.16"
bevy_ecs = "0.16"
bevy_gizmos = "0.16"
bevy_math = "0.16"
bevy_platform = "0.16"
bevy_text = "0.16"
bevy_transform = "0.16"
bevy_ui = "0.16"
bitflags = "2.6.0"

[dev-dependencies]
bevy = "0.16"
rand = "0.8.5"
